[workspace]
resolver = "2"
members = [
    "crates/prehnitedb",
    "crates/prehnited",
    "crates/prehnite-cli",
]

[workspace.package]
version = "0.42.0"
edition = "2021"
license = "MIT"
authors = ["sora5801 <sora5801fu@gmail.com>"]
rust-version = "1.70"

# A database earns its keep at -O. Keep the release profile aggressive;
# the codebase has no dependencies so the slower build is all our own code.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
