[package]
name = "prehnite-cli"
description = "PrehniteDB interactive command-line client."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "prehnite"
path = "src/main.rs"

[dependencies]
prehnitedb = { path = "../prehnitedb" }
