[package]
name = "prehnited"
description = "PrehniteDB network server daemon."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "prehnited"
path = "src/main.rs"

[dependencies]
prehnitedb = { path = "../prehnitedb" }
